feat: adds the security on frontend